# rosa-boundary

./: .env.example  .gitignore  .gitmodules  .shellcheckrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  Makefile  OWNERS  README.md  adversary-findings.json  entrypoint.sh  go.mod  go.sum  prek.toml  renovate.json
.claude/agents/: adversary.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: localstack-tests.yml  upload-sarif.yml
.tekton/: rosa-boundary-pull-request.yaml  rosa-boundary-push.yaml
adversary-findings/: README.md
adversary-findings/low/: claude-code-piped-install.md  containerfile-unpinned-base.md  efs-sg-egress.md  example-public-ip.md  oauth-callback-xss.md  oc-version-unvalidated.md  terraform-provider-broad-pin.md
adversary-findings/medium/: bedrock-iam-all-regions.md  cloudwatch-encryption-disabled.md  container-sudo-all.md  efs-no-filesystem-policy.md  lambda-cors-wildcard.md  lambda-deps-unpinned.md  lambda-ecs-wildcard-iam.md  s3-no-bucket-policy.md  s3-sse-s3-not-kms.md  sre-role-kms-wildcard.md
cmd/rosa-boundary/: main.go
deploy/network/: main.tf  outputs.tf  variables.tf  vpc.tf
docs/: README.md  adversary-findings_20260702.json  kube-proxy-sidecar.md  workflows.md
lambda/create-investigation/: Containerfile  Makefile  README.md  conftest.py  handler.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_handler.py
scripts/: codecov.sh  findings-to-sarif.py
tests/: oidc-token-debug.py
tools/: create-investigation-lambda.sh  join-investigation.sh  test-lambda-e2e.sh  verify-abac.sh
(+144 files in other folders)
