[project]
name = "create-investigation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyJWT==2.10.1",
    "cryptography==44.0.2",
    "requests==2.32.3",
    "boto3==1.38.0",
]

[dependency-groups]
dev = [
    "moto[ecs,efs,iam,kms,s3,sts]>=4.2.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
