[project]
name = "create-investigation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
    "boto3>=1.34.0",
]

[dependency-groups]
dev = [
    "moto[ecs,efs,iam,kms,s3,sts]>=4.2.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
